--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "jsonwebtoken": "^8.5.1",
+    "jw-paginate": "^1.0.4",
     "moment": "^2.26.0",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
